--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Arsh</title>
+  <title>Akshat</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
 
   <style>
@@ -187,21 +187,21 @@
     <main>
       <section class="hero" aria-labelledby="hero-heading">
         <div class="hero-left">
-          <h1 id="hero-heading">Hey, I'm Arsh!</h1>
+          <h1 id="hero-heading">Hey, I'm Akshat!</h1>
           <p class="lead">
             // todo
           </p>
 
           <div class="social-inline" aria-label="Social links">
             <!-- GitHub -->
-            <a href="https://github.com/arsh14jain" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+            <a href="https://github.com/akshatj536" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
               <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 .5C5.65.5.5 5.65.5 12c0 5.08 3.29 9.38 7.86 10.9.58.11.79-.25.79-.55 0-.27-.01-1-.02-1.96-3.2.7-3.88-1.43-3.88-1.43-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.11-.76.41-1.27.75-1.56-2.56-.29-5.26-1.28-5.26-5.69 0-1.26.45-2.3 1.2-3.11-.12-.29-.52-1.47.12-3.06 0 0 .97-.31 3.18 1.19a11 11 0 0 1 5.8 0c2.2-1.5 3.17-1.19 3.17-1.19.64 1.59.24 2.77.12 3.06.75.81 1.2 1.85 1.2 3.11 0 4.42-2.7 5.4-5.28 5.68.42.36.79 1.07.79 2.16 0 1.56-.014 2.82-.014 3.2 0 .3.21.66.8.55A10.999 10.999 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5z"/></svg>
               <span class="sr-only">GitHub</span>
             </a>
 
 
             <!-- LinkedIn -->
-            <a href="https://www.linkedin.com/in/arsh14jain/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+            <a href="https://www.linkedin.com/in/akshat-jain-31b5b22b9/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
               <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.851-3.037-1.851 0-2.134 1.445-2.134 2.943v5.663H9.356V9h3.414v1.561h.049c.476-.9 1.637-1.85 3.368-1.85 3.6 0 4.266 2.368 4.266 5.451v6.29zM5.337 7.433C4.193 7.433 3.268 6.507 3.268 5.363 3.268 4.219 4.193 3.293 5.337 3.293c1.144 0 2.069.926 2.069 2.07 0 1.144-.925 2.07-2.069 2.07zM6.93 20.452H3.743V9h3.187v11.452z"/></svg>
               <span class="sr-only">LinkedIn</span>
             </a>
@@ -211,8 +211,8 @@
         </div>
 
         <div class="avatar-wrap" aria-hidden="false">
-          <figure class="avatar" title="Arsh Jain">
-            <img src="arshjain_portfolio_image.png" alt="Portrait of Arsh Jain">
+          <figure class="avatar" title="Akshat Jain">
+            <img src="Akshatjain_image.jpeg" alt="Portrait of Akshat Jain">
           </figure>
         </div>
       </section>
