--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         <div class="avatar-wrap" aria-hidden="false">
           <figure class="avatar" title="Akshat Jain">
-            <img src="Akshatjain_image.jpeg" alt="Portrait of Akshat Jain">
+            <img src="Akshatjain_image.jpg" alt="Portrait of Akshat Jain">
           </figure>
         </div>
       </section>
